# ChangeLog for net-p2p/deluge
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.114 2009/02/12 15:46:21 armin76 Exp $

  12 Feb 2009; Raúl Porcel <armin76@gentoo.org> deluge-9999.ebuild:
  Add new deps to svn ebuild, bug #258284

*deluge-1.1.2 (12 Feb 2009)

  12 Feb 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.2.ebuild:
  Version bump

*deluge-1.1.1 (25 Jan 2009)

  25 Jan 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.1.ebuild:
  Version bump

  18 Jan 2009; Markus Meier <maekke@gentoo.org> deluge-1.0.7-r1.ebuild:
  amd64 stable, bug #254797

*deluge-1.1.0-r1 (15 Jan 2009)
*deluge-1.0.7-r1 (15 Jan 2009)

  15 Jan 2009; Raúl Porcel <armin76@gentoo.org> files/deluged.init,
  -deluge-1.0.7.ebuild, +deluge-1.0.7-r1.ebuild, -deluge-1.1.0.ebuild,
  +deluge-1.1.0-r1.ebuild:
  Revbump so users get the fix on the init script, bug #254995, thanks to
  Matt Farmer <matt at mattfarmer dot net> for the fix

  13 Jan 2009; Raúl Porcel <armin76@gentoo.org> -deluge-1.0.5.ebuild,
  -deluge-1.0.6.ebuild, deluge-1.0.7.ebuild:
  x86 stable, remove old

*deluge-1.1.0 (13 Jan 2009)

  13 Jan 2009; Raúl Porcel <armin76@gentoo.org> -deluge-1.1.0_rc1.ebuild,
  -deluge-1.1.0_rc2.ebuild, -deluge-1.1.0_rc3.ebuild, +deluge-1.1.0.ebuild:
  Version bump

*deluge-1.1.0_rc3 (06 Jan 2009)

  06 Jan 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.0_rc3.ebuild:
  Version bump

*deluge-1.1.0_rc2 (30 Dec 2008)

  30 Dec 2008; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.0_rc2.ebuild:
  Version bump

  28 Dec 2008; Raúl Porcel <armin76@gentoo.org> files/deluged.conf,
  files/deluged.init:
  Enhance init script, thanks to Alex Kravtsov and Kevin Bowling on bug #238733

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> deluge-1.1.0_rc1.ebuild:
  Change SRC_URI to bz2

*deluge-1.1.0_rc1 (26 Dec 2008)

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.0_rc1.ebuild:
  Version bump
