@@ -5,11 +5,13 @@ DIST deluge-1.0.7.tar.gz 2577764 RMD160 b980ab82e67aabdbe180d32e8a1c5e175501fbd3
 DIST deluge-1.1.0.tar.bz2 2196924 RMD160 0c26ff3eaee49cfb487e37e56ead5ec5bdcd3a2c SHA1 752df43352a587aac6336eb154a5402dd347be6e SHA256 f5e5ca37410ef74ad2432e6ac4561dd770b6c2812d3af8317a182b86a1dda1be
 DIST deluge-1.1.1.tar.bz2 2187927 RMD160 c49e862a98e4e097646aafc4ecdb20a692b9c8d8 SHA1 1f62b7fb7516c7cda256ae224c55a613cd47f20d SHA256 f2edfdca47837252ab6fa753cbf07aed889217dfc19809646326d68562162017
 DIST deluge-1.1.2.tar.bz2 2138875 RMD160 2c435e777ce92b4d1f9eb643b8ff63a996f83584 SHA1 359b5da26581f0820dee88f1103845aaf88db275 SHA256 b45914378c134acd9fe58f6132b3fb2f1c33e39f67c838873adc9be08e971d63
+DIST deluge-1.1.3.tar.bz2 2141719 RMD160 f6dab35651fe4d90e8866378676dc7fe976dfccf SHA1 23957e33a7c3644008245f7e83f14500a8e44655 SHA256 74e55ce87fdb3d546a9da2ca7ba7201545ce7f0e4a6f0fb58b1475743e871667
 EBUILD deluge-0.5.9.3.ebuild 1309 RMD160 7d3570e17e9dc7894675170808cde86725ee8ae0 SHA1 8646c2124392212f6b9e3d87c61242f14553fec9 SHA256 8109297079be09a677aa05c0207c5d7681e59893cfc3952e3233da478b3ef9e1
 EBUILD deluge-1.0.7-r1.ebuild 1714 RMD160 b4c3e4254cf572074805b08d9b1b810dc428a317 SHA1 c91156939a9a51b0db4e260f6bda48b580ef3b7d SHA256 e2c884680486a165c3c6127ac03b289e0dcd2e860a630f9c172096d633d48781
 EBUILD deluge-1.1.0-r1.ebuild 1584 RMD160 9c276fc9771825b9705e41523bf3c3d3ea70be77 SHA1 0cd3a38965fbaec8682acd447d072d34d911ecf3 SHA256 d423b074954b343fdc0d80dd17084f9aa989f419e2015f14b213d9887cb74a2f
 EBUILD deluge-1.1.1.ebuild 1581 RMD160 666e0db1dc2bcb52cc804d0c57cb0148ae0bda8f SHA1 5f36c46d17aa5dcbea2aab8be196fffb3975edaa SHA256 709d3aa9a0f551b5869bd61adaad863d9106af7f3cc83b374f54a5e01c66555d
 EBUILD deluge-1.1.2.ebuild 1581 RMD160 7da09b64d211703fca10dc31cc239cf8772b6fca SHA1 397b62f0c16198f7557ec3bbeaa57bbd01bcfe90 SHA256 94b445ad9b10a678d243574372f951e5f15685eecb01a339b36dd875c9396f72
+EBUILD deluge-1.1.3.ebuild 1581 RMD160 a7ad00d9f9333e1bf26d7df707791f0efcbc2486 SHA1 8c8d1d299b2494b6464838fb4d9137dbc7cc0800 SHA256 cfc21ab891b5122ae24a1d73cd8be0d0027170be6118d8b106d70b29982e5857
 EBUILD deluge-9999.ebuild 1814 RMD160 2846fcde5b6297e277eddb6005d2e06340a09f20 SHA1 bbfe59aee8f76df628e4d8ccb24f3476b4f15e4f SHA256 793fbe783f235901c59513219b916aa92411419c336cf87292fa2a19ed178952
-MISC ChangeLog 16124 RMD160 70df8e72cc5d0aecdeaf0fff9bb018d075ca686c SHA1 c036535eec05fbb8f6bbdd745d58801415d6d53d SHA256 3ebf65d809b8296f2a41a295cec308edf220f8afc87ed2b4bdf274c2fc114d30
+MISC ChangeLog 16240 RMD160 9facead4ac56bc608803811848b2afc24f5cf63d SHA1 fe82553f000ab2f444ebd7729131acaad2df78a6 SHA256 a6c99c52426c6978f81b70ec49add956857e70057556fb274bf8658e2e3c45d6
 MISC metadata.xml 222 RMD160 0dc4b04f31dcc89402f87c352327fe327b3cf31f SHA1 540337d5841f15b43186e5858f9e24032567de08 SHA256 713b9d1548682d5c1c3686a7b0711acf065a8fa4f386883ace90359d3dceb966
