@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/deluge
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.114 2009/02/12 15:46:21 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.115 2009/02/16 14:14:00 armin76 Exp $
+
+*deluge-1.1.3 (16 Feb 2009)
+
+  16 Feb 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.3.ebuild:
+  Version bump
 
   12 Feb 2009; Raúl Porcel <armin76@gentoo.org> deluge-9999.ebuild:
   Add new deps to svn ebuild, bug #258284
